link the repo s'more

--- a/resume.tex
+++ b/resume.tex
@@ -399,6 +399,9 @@
 %---------------------------------------------------------------------------------------
 %	TITLE  HEADER
 %----------------------------------------------------------------------------------------
+
+\iconhref{Link}{5}{More than a resume! View source: https://github.com/mbmcmullen27/Resume}{https://github.com/mbmcmullen27/ncurses}{black} \\
+
 \fcolorbox{white}{darkcol}{\begin{minipage}[c][3cm][c]{1\mpwidth}
 	\begin {center}
 		\HUGE{ \textbf{ \textcolor{white}{ \uppercase{ Michael McMullen } } } } \\[-24pt]
@@ -414,13 +417,14 @@
 
 %\cvsection{About}
 
-\cvtext{\vspace{5pt}DevOps engineer with an unhealthy fascination with code, its structure, and its execution.\\
+\cvtext{\vspace{5pt}DevOps engineer with an unhealthy fascination with code and its structure.\\
 
-My personal experience spans a variety of languages and frameworks and I believe strongly in accessibility, interoperability, and compatibility.\\
+My personal experience spans a variety of languages and frameworks and I believe strongly in accessibility, interoperability, and compatibility... \\
+Therefore, Kubernetes at all costs. The easy way or the (more fun) hard way. In the cloud, in my home, on my desk. No nodes left behind. That's a promise.\\
 
-Reading, writing, learning languages. \\
+Reading, writing, learning, languages. \\
 Syntax and Strangeness. Deep dives only.\\ 
-I love all software equally and I desparately need to know how it works. \\
+Automation, for automation's sake! \\
 Looking for excuses to scan, tokenize and parse. \\
 Computering by day and also by night too... \\}
 
