--- a/resume.tex
+++ b/resume.tex
@@ -347,7 +347,7 @@
 
 \cvskill{Bash} {1+ yrs} {0.85} \\[-2pt]
 
-\cvskill{Terraform} {\textless\hspace{1pt} 1yr} {0.68} \\[-2pt]
+\cvskill{Terraform} {1+ yrs} {0.95} \\[-2pt]
  
 \cvskill{WebAssembly} {\textless\hspace{1pt} 1yr} {0.5} \\[-2pt]
 
@@ -434,8 +434,25 @@ Computering by day and also by night too... \\}
 \vspace{10pt}
 \cvsection{EXPERIENCE}
 \vspace{10pt}
+
 \cvevent
-	{Jun 2020 - PRESENT}
+	{Aug 2021 - PRESENT}
+	{DevOps Engineer, Boxboat an IBM company}
+	{Consultation \& Implementation}
+	{Busy doing all things DevOps, Kubernetes administration, writing terraform, fixing helm charts, integrating with open source tools, and automating myself into ambiguity}
+	{\cvlist{
+		\item Advise clients on DevOps best practices and recommend prefered tools
+		\item Implement complex cloud native solutions 
+		\item Researching emergent technology
+		\item Containerizing everything from scary scala apis, to monsterous dotnet monoliths
+		\item Training client teams on how to use gitops and automation tools
+	}}
+	{}
+	{}
+
+
+\cvevent
+	{Jun 2020 - Aug 2021}
 	{DevOps Engineer, Alegeus}
 	{Research and Development\vspace{-15pt}}
 	{\vspace{-15pt}Containerization... Optimization... Automation... Awesome.\vspace{-15pt}}
@@ -451,7 +468,6 @@ Computering by day and also by night too... \\}
 		\item Wrote JavaScript and Bash utilities to bridge the gap between Terraform and Azure cli during the Terraform migration
 	}}
 	{}
-
 
 \cvevent
 	{May 2019 - Jun 2020}
