--- a/resume.tex
+++ b/resume.tex
@@ -339,15 +339,15 @@
 
 \cvskill{C} {5+ yrs} {0.77} \\[-2pt]
 
-\cvskill{Java} {5+ yrs} {0.83} \\[-2pt]
+\cvskill{Java} {4+ yrs} {0.83} \\[-2pt]
 
 \cvskill{Python} {5+ yrs} {0.68} \\[-2pt]
 
 \cvskill{Go} {1+ yrs} {0.59} \\[-2pt]
 
-\cvskill{Bash} {1+ yrs} {0.85} \\[-2pt]
+\cvskill{Bash} {5+ yrs} {0.95} \\[-2pt]
 
-\cvskill{Terraform} {1+ yrs} {0.95} \\[-2pt]
+\cvskill{Terraform} {5+ yrs} {0.95} \\[-2pt]
  
 \cvskill{WebAssembly} {\textless\hspace{1pt} 1yr} {0.5} \\[-2pt]
 
@@ -446,8 +446,14 @@ Computering by day and also by night too... \\}
 		\item Researching emergent technology
 		\item Containerizing everything from scary scala apis, to monsterous dotnet monoliths
 		\item Training client teams on how to use gitops and automation tools
+		\item Github and Azure cloud administration
+		\item Lead Github migrations and Actions development
 	}}
-	{}
+	{\cvlist {
+		\item Built a helm based Github Actions Runner Controller for easy Openshift integration: https://github.com/boxboat-github-practice/github-arc-operator
+		\item Owned, maintained, and managed Boxboat's internal Backstage instance
+		\item Lead app development for client demos and automation testing https://github.com/boxboat-github-practice/simple-tracker-express-api
+	}}
 	{}
 
 
