--- a/resume.tex
+++ b/resume.tex
@@ -450,9 +450,12 @@ Computering by day and also by night too... \\}
 		\item Lead Github migrations and Actions development
 	}}
 	{\cvlist {
-		\item Built a helm based Github Actions Runner Controller for easy Openshift integration: https://github.com/boxboat-github-practice/github-arc-operator
+		\item Built a helm based Github Actions Runner Controller for easy Openshift integration: 
+			https://github.com/boxboat-github-practice/github-arc-operator
 		\item Owned, maintained, and managed Boxboat's internal Backstage instance
-		\item Lead app development for client demos and automation testing https://github.com/boxboat-github-practice/simple-tracker-express-api
+		\item Lead app development for client demos and automation testing:
+			https://github.com/boxboat-github-practice/simple-tracker-express-api
+		\item Github Actions and Github Actions and Github Actions and Github Actions
 	}}
 	{}
 
