--- a/resume.tex
+++ b/resume.tex
@@ -453,8 +453,8 @@ Computering by day and also by night too... \\}
 		\item Built a helm based Github Actions Runner Controller for easy \linebreak Openshift integration: 
 			https://github.com/boxboat-github-practice/github-arc-operator
 		\item Owned, maintained, and managed Boxboat's internal Backstage instance
-		\item Lead app development for client demos and automation testing:
-			https://github.com/boxboat-github-practice/simple-tracker-express-api \linebreak
+		\item Lead app development for client demos and automation testing: \linebreak
+			https://github.com/boxboat-github-practice/simple-tracker-express-api 
 		\item Github Actions and Github Actions and Github Actions and Github Actions
 	}}
 	{}
