--- a/resume.tex
+++ b/resume.tex
@@ -450,7 +450,7 @@ Computering by day and also by night too... \\}
 		\item Lead Github migrations and Actions development
 	}}
 	{\cvlist {
-		\item Built a helm based Github Actions Runner Controller for easy \linebreak Openshift integration: 
+		\item \begin{flushleft}Built a helm based Github Actions Runner Controller for easy\end{flushleft}\linebreak Openshift integration: 
 			https://github.com/boxboat-github-practice/github-arc-operator
 		\item Owned, maintained, and managed Boxboat's internal Backstage instance
 		\item Lead app development for client demos and automation testing: \linebreak
