--- a/src/resume.tex
+++ b/src/resume.tex
@@ -355,13 +355,15 @@
 
 \cvskill{MANY MORE} {\hspace{-28pt}VERY SOON} {1} \\[-2pt]
 
-\textcolor{darkcol}{* I know you're probably thinking \\"Regex? That's not a programming language!" I included it anyway as a formal grammar because I like it, and I think its an important skill. \\}
+\textcolor{darkcol}{\hspace*{-8}* I know you're probably thinking \\"Regex? That's not a programming language!" I included it anyway as a formal grammar because I like it, and I think its an important skill. \\}
 %\vfill\null
 
 %---------------------------------------------------------------------------------------
 %	EDUCATION
 %----------------------------------------------------------------------------------------
 %\newpage
+
+\vspace{10pt}
 \cvsection{EDUCATION}
 \cvmetaevent
 {\vspace{-10pt}2014 - 2019}
@@ -373,13 +375,22 @@
 %	HOBBIES
 %----------------------------------------------------------------------------------------
 
+\cvsection{Certifications}
+\vspace{-20pt}
+\cvmetaevent
+{}
+{}
+{}
+{- CKA\\- Certified Backstage Associate\\\hspace*{2} (Exam Developer) \\- Github Actions Certification}
+
+\vspace{20pt}
 \cvsection{Hobbies}
 \cvmetaevent
-{RaspberryPi}
+{\vspace{-10pt}RaspberryPi}
 {}
 {}
-{ - clustering them\\  - putting Kubernetes on them\\  - putting hats on them}
-
+{ - Clustering them\\  - Putting Kubernetes on them\\  - Putting hats on them}
+\newpage
 \cvmetaevent
 {Reading}
 {}
@@ -389,13 +400,6 @@
 \iconhref{Link}{5}{Crafting Interpreters}{https://github.com/mbmcmullen27/lox}{black} \\ 
 \iconhref{Link}{5}{Guide to Ncurses}{https://github.com/mbmcmullen27/ncurses}{black} \\
 }
-
-\cvmetaevent
-{Online Classes}
-{}
-{}
-{ - Udemy CKA prep course}
-
 \end{leftcolumn}
 \begin{rightcolumn}
 %---------------------------------------------------------------------------------------
