--- a/src/resume.tex
+++ b/src/resume.tex
@@ -406,7 +406,7 @@
 %	TITLE  HEADER
 %----------------------------------------------------------------------------------------
 
-\iconhref{Link}{5}{\textcolor{black}{More than a resume! View source:} https://github.com/mbmcmullen27/Resume}{https://github.com/mbmcmullen27/Resume}{blue} \\
+\iconhref{Link}{5}{\textcolor{black}{Compiled with \LaTeX. View source:} https://github.com/mbmcmullen27/Resume}{https://github.com/mbmcmullen27/Resume}{blue} \\
 
 \fcolorbox{white}{darkcol}{\begin{minipage}[c][3cm][c]{1\mpwidth}
 	\begin {center}
@@ -425,13 +425,9 @@
 
 \cvtext{\vspace{5pt}DevOps engineer with an unhealthy fascination with code and its structure.\\
 
-My personal experience spans a variety of languages and frameworks and I believe strongly in accessibility, interoperability, and compatibility. I am an advocate for Developer experience, enablement, and productivity. I want to work in an Engineering focused organization that understands the importance of modernizing the tech stack... \\
+My personal experience spans a variety of languages and frameworks focusing primarily in the Developer Portal and Experience space. I believe strongly in accessibility, interoperability, and compatibility. I'm a contributor on the Linux Foundations Certified Backstage Associate (CBA) exam. I advocate strongly for building a modern Developer experience, and enabeling developers to maximize their productivity. I want to work in an Engineering focused organization that understands the importance of modernizing the tech stack... \\
 
-Therefore, Kubernetes at all costs. The easy way or the hard way. In the cloud, in my home, on my desk. No nodes left behind.\\
-
-Reading, writing, learning, languages. \\
-Syntax and Strangeness. Deep dives only.\\ 
-Automation, for automation's sake! \\}
+Therefore, Kubernetes at any scale, automation by default, cloud native architecture, open source software, and continuous improvement and development are  pillars I operate by. \\}
 
 %---------------------------------------------------------------------------------------
 %	WORK EXPERIENCE
@@ -444,16 +440,16 @@ Automation, for automation's sake! \\}
 	{Aug 2021 - PRESENT}
 	{DevOps Engineer / Solutions Architect, Boxboat an IBM company}
 	{Consultation \& Implementation}
-	{Busy doing all things DevOps and DevEx: Kubernetes administration, writing terraform, fixing helm charts, integrating with open source tools, and automating myself into ambiguity}
+	{Busy doing all things DevOps and DevEx: Kubernetes administration, writing terraform, fixing helm charts, integrating with open source tools, github migrations, and automating myself into ambiguity}
 	{\cvlist{
 		\item Advise clients on DevOps best practices and recommend prefered tools
-		\item Implement complex cloud native solutions 
-		\item Researching emergent technology
-		\item Containerizing everything from scary scala apis, to monsterous dotnet monoliths
+		\item Orchestrating major Github Enterprise migrations and building tools to make the experience easy
 		\item Training client teams on how to use gitops and automation tools
 		\item Github and Azure cloud administration and transformation
-		\item Orchestrating major Github Enterprise migrations
 		\item Github Actions development and training
+		\item Implement complex cloud native solutions in Azure and AWS
+		\item Continuous learning and researching emergent technology
+		\item Containerizing everything from scary scala apis, to monsterous dotnet monoliths
 	}}
 	{\cvlist {
 		\item Lead delivery teams on and offshore. Including Boxboat's first international Developer Experience engagement in the Netherlands.
