--- a/src/resume.tex
+++ b/src/resume.tex
@@ -327,22 +327,22 @@
 
 \cvsection{CONTACT} \\
 
-\icontext{MapMarker}{12}{Milwaukee WI,\\12345 Somewhere St.}{black}\\[6pt]
+\icontext{MapMarker}{12}{Milwaukee WI}{black}\\[6pt]
 \icontext{MobilePhone}{12}{920-277-8465}{black}\\[6pt]
 \iconemail{Envelope}{12}{mbmcmullen27@gmail.com}{mbmcmullen27@gmail.com}{black}\\[6pt]
 \iconhref{Github}{12}{@mbmcmullen27}{https://github.com/mbmcmullen27}{black}\\[6pt]
 
 \cvsection{LANGUAGES} \\
 
-\cvskill{JavaScript} {8+ yrs} {0.95} \\[-2pt]
+\cvskill{JavaScript} {10+ yrs} {0.95} \\[-2pt]
 
-\cvskill{Regex *} {8+ yrs} {0.95} \\[-2pt]
+\cvskill{Regex *} {10+ yrs} {0.95} \\[-2pt]
 
 \cvskill{C} {5+ yrs} {0.77} \\[-2pt]
 
 \cvskill{Python} {5+ yrs} {0.75} \\[-2pt]
 
-\cvskill{Java} {4+ yrs} {0.68} \\[-2pt]
+\cvskill{Java} {5+ yrs} {0.68} \\[-2pt]
 
 
 \cvskill{Go} {1+ yrs} {0.59} \\[-2pt]
@@ -406,7 +406,7 @@
 %	TITLE  HEADER
 %----------------------------------------------------------------------------------------
 
-\iconhref{Link}{5}{\textcolor{black}{Compiled with \LaTeX. View source:} https://github.com/mbmcmullen27/Resume}{https://github.com/mbmcmullen27/Resume}{blue} \\
+\iconhref{Link}{5}{\small{\textcolor{black}{Compiled with \LaTeX. View source:} https://github.com/mbmcmullen27/Resume}}{https://github.com/mbmcmullen27/Resume}{blue} \\
 
 \fcolorbox{white}{darkcol}{\begin{minipage}[c][3cm][c]{1\mpwidth}
 	\begin {center}
@@ -440,13 +440,14 @@ Therefore, Kubernetes at any scale, automation by default, cloud native architec
 	{Aug 2021 - PRESENT}
 	{DevOps Engineer / Solutions Architect, Boxboat an IBM company}
 	{Consultation \& Implementation}
-	{Busy doing all things DevOps and DevEx: Kubernetes administration, writing terraform, fixing helm charts, integrating with open source tools, github migrations, and automating myself into ambiguity}
+	{Busy doing all things DevOps and DevEx: Kubernetes administration, terraform development, Developer Portal adoption and development, Backstage plugin implementations and template creation, fixing helm charts, creatinng helm charts, integrating with open source tools, github migrations, and automating myself into ambiguity}
 	{\cvlist{
 		\item Advise clients on DevOps best practices and recommend prefered tools
 		\item Orchestrating major Github Enterprise migrations and building tools to make the experience easy
 		\item Training client teams on how to use gitops and automation tools
 		\item Github and Azure cloud administration and transformation
 		\item Github Actions development and training
+		\item Internal Developer Portal (Backstage) development and administration
 		\item Implement complex cloud native solutions in Azure and AWS
 		\item Continuous learning and researching emergent technology
 		\item Containerizing everything from scary scala apis, to monsterous dotnet monoliths
@@ -476,7 +477,7 @@ Therefore, Kubernetes at any scale, automation by default, cloud native architec
 		\item Monitor and maintain existing infrastructure
 	}}
 	{\cvlist {
-		\item Migrated mannually developed and deployed Azure Cloud resources and dotnet middle tier api, inherited from a vendor, to Terraform managed infrastructure as code while maintaining live production architecture.
+		\item Migrated manually developed and deployed Azure Cloud resources and dotnet middle tier api, inherited from a vendor, to Terraform managed infrastructure as code while maintaining live production architecture.
 		\item Converted the scrum team's manual deployment process to git flow with Azure DevOps pipelines
 		\item Wrote JavaScript and Bash utilities to bridge the gap between Terraform and Azure cli during the Terraform migration
 	}}
