fix spelling - add raw text file

--- a/src/resume.tex
+++ b/src/resume.tex
@@ -440,9 +440,9 @@ Therefore, Kubernetes at any scale, automation by default, cloud native architec
 	{Aug 2021 - PRESENT}
 	{DevOps Engineer / Solutions Architect, Boxboat an IBM company}
 	{Consultation \& Implementation}
-	{Busy doing all things DevOps and DevEx: Kubernetes administration, terraform development, Developer Portal adoption and development, Backstage plugin implementations and template creation, fixing helm charts, creatinng helm charts, integrating with open source tools, github migrations, and automating myself into ambiguity}
+	{Busy doing all things DevOps and DevEx: Kubernetes administration, terraform development, Developer Portal adoption and development, Backstage plugin implementations and template creation, fixing helm charts, creating helm charts, integrating with open source tools, github migrations, and automating myself into ambiguity}
 	{\cvlist{
-		\item Advise clients on DevOps best practices and recommend prefered tools
+		\item Advise clients on DevOps best practices and recommend preferred tools
 		\item Orchestrating major Github Enterprise migrations and building tools to make the experience easy
 		\item Training client teams on how to use gitops and automation tools
 		\item Github and Azure cloud administration and transformation
@@ -457,7 +457,7 @@ Therefore, Kubernetes at any scale, automation by default, cloud native architec
 		\item Architected large scale Github Actions Runner deployments on EKS for a major financial firm. Servicing thousands of builds per day.
 		\item Built a helm based Github Actions Runner Controller for easy Openshift integration: 
 		\href{https://github.com/boxboat-github-practice/github-arc-operator}{\textcolor{blue}{github-arc-operator}}
-		\item Owned, maintained, managed, and devloped Boxboat's internal Backstage instance
+		\item Owned, maintained, managed, and developed Boxboat's internal Backstage instance
 		\item Lead app development for client demos and automation testing: 
 		\href{https://github.com/boxboat-github-practice/simple-tracker-express-api}{\textcolor{blue}{simple-tracker-express-api}}
 		\item Github Actions and Github Actions and Github Actions and Github Actions
